More Text added

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>Tri-Lambs. We're cool.</p>
+<p>Also, GitHub won't update me for some reason :C</p>
 </body>
 </html>
