Deleted filler text, inserted mission statement
damn we're nondiscriminatory as fuck.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Lambda Lambda Lambda National Fraternity</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
+        <p>Lambda Lambda Lambda is a social fraternity dedicated to the enjoyment and enrichment of pop culture and to the brotherhood of our members.</p>
+        <p>Lambda Lambda Lambda does not discriminate based on race, sex, gender, religion, class, or sexual orientation.</p>
         <p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
         </p>
