fucking with button names

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Tri-Lambs</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -81,7 +81,7 @@
         <p>Lambda Lambda Lambda is a social fraternity dedicated to the enjoyment and enrichment of pop culture and to the brotherhood of our members.</p>
         <p>Lambda Lambda Lambda does not discriminate based on race, sex, gender, religion, class, or sexual orientation.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">this button is useless &raquo;</a>
         </p>
       </div>
 
