--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Lambda Lambda Lambda National Fraternity</h1>
+        <h1>Tri-Lambs</h1>
+		<h3>Lambda Lambda Lambda National Fraternity
         <p>Lambda Lambda Lambda is a social fraternity dedicated to the enjoyment and enrichment of pop culture and to the brotherhood of our members.</p>
         <p>Lambda Lambda Lambda does not discriminate based on race, sex, gender, religion, class, or sexual orientation.</p>
         <p>
