Beginning creation of actual website
Did a ton.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="container">
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <!-- <div class="jumbotron">
         <h1>Tri-Lambs</h1>
 		<h2>Lambda Lambda Lambda National Fraternity<h2>
         <p>Lambda Lambda Lambda is a social fraternity dedicated to the enjoyment and enrichment of pop culture and to the brotherhood of our members.</p>
@@ -87,6 +87,99 @@
       </div>
 
     </div> <!-- /container -->
+	
+	<div class="row">
+		<div class="col-md-4">
+			<div class="loose_seal">	
+			</div>
+		</div>
+		<div class="col-md-7">
+			<div class="intro_title_text">
+				<h1>Lambda Lambda Lambda</h1>
+				<h1> National Fraternity</h1>
+				<h2>^ ^ ^</h2>
+				<h3>Tri-Lambs</h3>
+			</div>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-12">
+			<div class="mission_statement">
+				<h3>Mission Statement</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at sapien ultrices, adipiscing mauris vel, pretium ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit consequat ipsum, sit amet bibendum lorem egestas a. Mauris euismod nisi sed lectus lobortis commodo. Fusce eu diam mauris. Nulla ultrices velit quis lorem dictum placerat. Praesent fermentum suscipit dui vitae tincidunt.</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-4">
+			<div class="lambda"></div>
+			<div class="contact_us">
+				<h4>Contact Us</h4>
+				<p>email@email.com</p>
+				<p>203 555 0113</p>
+			</div>
+		</div>
+		
+		<div class="col-md-4">
+			<div class="lambda"></div>
+			<div class="about_us">
+				<h4>About Us</h4>
+				<p>Fusce nec orci ac metus ultricies viverra. Sed dictum semper faucibus. Integer mauris nisl, feugiat vel congue lobortis, sodales sit amet ante. Vestibulum pulvinar volutpat ullamcorper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+			</div>
+		</div>
+		
+		<div class="col-md-4">
+			<div class="lambda"></div>
+			<div class="chapter_info">
+				<h4>Chapter Info</h4>
+				<p>Fusce nec orci ac metus ultricies viverra. Sed dictum semper faucibus. Integer mauris nisl, feugiat vel congue lobortis, sodales sit amet ante. Vestibulum pulvinar volutpat ullamcorper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="being_a_brother afterthought_box">
+						<div class="afterthought_textcontainer">
+							<h4>Being a Brother</h4>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="final_lambda_image afterthought_box">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="why_lambdas_are_awesome afterthought_box">
+						<div class="afterthought_textcontainer">
+							<h4>Why ^ s are Awesome!</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+		
+			<div class="row">
+				<div class="col-md-12">
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-md-12">
+					<div class="final_advice">
+						<h6>Follow the 12</h6>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
 
 
     <!-- Bootstrap core JavaScript
