Added Seal and Fiddled with Text Alignment
FRUSTRATION!!!!!

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+	<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,700&subset=greek' rel='stylesheet' type='text/css'>
     <link href="navbar-static-top.css" rel="stylesheet">
 	<link href="css/trilambs.css" rel="stylesheet">
 	
@@ -43,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Tri-Lambs</a>
+          <a class="navbar-brand greek_font" href="#">Λ Λ Λ</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -90,14 +91,17 @@
 	
 	<div class="row">
 		<div class="col-md-4">
-			<div class="loose_seal">	
+			<div class="loose_seal center-block">
+				<img src="img/tri-lamb_seal.png" class="img-responsive" alt="Tri-Lambs Seal">
 			</div>
 		</div>
 		<div class="col-md-7">
 			<div class="intro_title_text">
 				<h1>Lambda Lambda Lambda</h1>
 				<h1> National Fraternity</h1>
-				<h2>^ ^ ^</h2>
+				<div class="greek_font intro_title_lambdas">
+					<h1>Λ Λ Λ</h1>
+				</div>
 				<h3>Tri-Lambs</h3>
 			</div>
 		</div>
