Center Aligned Seal Image
YAY!

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 	
 	<div class="row">
 		<div class="col-md-4">
-			<div class="loose_seal center-block">
-				<img src="img/tri-lamb_seal.png" class="img-responsive" alt="Tri-Lambs Seal">
+			<div class="loose_seal">
+				<img src="img/tri-lamb_seal.png" class="img-responsive center-block" alt="Tri-Lambs Seal">
 			</div>
 		</div>
 		<div class="col-md-7">
