Inserted Λ in Lambdas are Awesome Box
insertion <_<

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 				</div>
 				<div class="col-md-4">
 					<div class="why_lambdas_are_awesome afterthought_box">
-						<div class="afterthought_textcontainer">
-							<h4>Why ^ s are Awesome!</h4>
+						<div class="afterthought_textcontainer greek_font">
+							<h4>Why Λs are Awesome!</h4>
 						</div>
 					</div>
 				</div>
