--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
     <div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    <!-- this is menu button for mobile     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand greek_font" href="#">Λ Λ Λ</a>
+          </button> -->
+          <a class="navbar-brand greek_font" href="http://tri-lambs.org">Λ Λ Λ</a>
         </div>
-        <div class="navbar-collapse collapse">
+    <!--    <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
@@ -63,51 +63,42 @@
                 <li><a href="#">One more separated link</a></li>
               </ul>
             </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
+          </ul>	-->
+    <!--      <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/">Follow</a></li>
             <li class="active"><a href="./">the</a></li>
             <li><a href="../navbar-fixed-top/">12</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+        </div><!--/.nav-collapse
+      </div> -->
     </div>
 
 
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <!-- <div class="jumbotron">
-        <h1>Tri-Lambs</h1>
-		<h2>Lambda Lambda Lambda National Fraternity<h2>
-        <p>Lambda Lambda Lambda is a social fraternity dedicated to the enjoyment and enrichment of pop culture and to the brotherhood of our members.</p>
-        <p>Lambda Lambda Lambda does not discriminate based on race, sex, gender, religion, class, or sexual orientation.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">this button is useless &raquo;</a>
-        </p>
-      </div>
-
-    </div> <!-- /container -->
-	
-	<div class="row">
-		<div class="col-md-4">
-			<div class="loose_seal">
-				<img src="img/tri-lamb_seal.png" class="img-responsive center-block" alt="Tri-Lambs Seal">
+	<div class="container-full intro_title_block">
+		<div class="row">
+			<div class="col-md-2">
 			</div>
-		</div>
-		<div class="col-md-7">
-			<div class="intro_title_text">
-				<h1>Lambda Lambda Lambda</h1>
-				<h1> National Fraternity</h1>
-				<div class="greek_font intro_title_lambdas">
-					<h1>Λ Λ Λ</h1>
+			<div class="col-md-3">
+				<div class="loose_seal">
+					<img src="img/tri-lamb_seal.png" class="img-responsive center-block img_seal" alt="Tri-Lambs Seal">
 				</div>
-				<h3>Tri-Lambs</h3>
 			</div>
-		</div>
-		<div class="col-md-1">
-		</div>
+			<div class="col-md-5">
+				<div class="intro_title_text">
+					<h1>Lambda Lambda Lambda</h1>
+					<h1> National Fraternity</h1>
+					<div class="greek_font intro_title_lambdas">
+						<h1>Λ Λ Λ</h1>
+					</div>
+					<h3>Tri-Lambs</h3>
+				</div>
+			</div>
+			<div class="col-md-2">
+			</div>
+		</div>	
 	</div>
+
+<div class="container">	
 	
 	<div class="row">
 		<div class="col-md-12">
@@ -121,7 +112,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div class="lambda"></div>
-			<div class="contact_us">
+			<div class="contact_us central_text_box">
 				<h4>Contact Us</h4>
 				<p>email@email.com</p>
 				<p>203 555 0113</p>
@@ -130,7 +121,7 @@
 		
 		<div class="col-md-4">
 			<div class="lambda"></div>
-			<div class="about_us">
+			<div class="about_us central_text_box">
 				<h4>About Us</h4>
 				<p>Fusce nec orci ac metus ultricies viverra. Sed dictum semper faucibus. Integer mauris nisl, feugiat vel congue lobortis, sodales sit amet ante. Vestibulum pulvinar volutpat ullamcorper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 			</div>
@@ -138,15 +129,16 @@
 		
 		<div class="col-md-4">
 			<div class="lambda"></div>
-			<div class="chapter_info">
+			<div class="chapter_info central_text_box">
 				<h4>Chapter Info</h4>
 				<p>Fusce nec orci ac metus ultricies viverra. Sed dictum semper faucibus. Integer mauris nisl, feugiat vel congue lobortis, sodales sit amet ante. Vestibulum pulvinar volutpat ullamcorper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 			</div>
 		</div>
 	</div>
-	
-	<div class="row">
-		<div class="col-md-12">
+
+</div>
+
+<div class="container-full end_of_page_block">	
 			<div class="row">
 				<div class="col-md-4">
 					<div class="being_a_brother afterthought_box">
@@ -180,9 +172,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	
 	
 
 
