Updated Several Colors/Patterns/idk a lot
Yup.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,700&subset=greek' rel='stylesheet' type='text/css'>
     <link href="navbar-static-top.css" rel="stylesheet">
 	<link href="css/trilambs.css" rel="stylesheet">
@@ -87,9 +89,9 @@
 				<div class="intro_title_text">
 					<h1>Lambda Lambda Lambda</h1>
 					<h1> National Fraternity</h1>
-					<div class="greek_font intro_title_lambdas">
+					<span class="greek_font intro_title_lambdas">
 						<h1>Λ Λ Λ</h1>
-					</div>
+					</span>
 					<h3>Tri-Lambs</h3>
 				</div>
 			</div>
@@ -103,8 +105,9 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="mission_statement">
-				<h3>Mission Statement</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at sapien ultrices, adipiscing mauris vel, pretium ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit consequat ipsum, sit amet bibendum lorem egestas a. Mauris euismod nisi sed lectus lobortis commodo. Fusce eu diam mauris. Nulla ultrices velit quis lorem dictum placerat. Praesent fermentum suscipit dui vitae tincidunt.</p>
+				<h1>Mission Statement</h1>
+				<p>Lambda Lambda Lambda is a social fraternity dedicated to the enjoyment and enrichment of pop culture and to the brotherhood of our members.</p>
+				<p>Lambda Lambda Lambda does not discriminate based on race, sex, gender, religion, class, or sexual orientation. </p> 
 			</div>
 		</div>
 	</div>
@@ -167,6 +170,8 @@
 			
 			<div class="row">
 				<div class="col-md-12">
+					<div class="horizontal_rule">
+					</div>
 					<div class="final_advice">
 						<h6>Follow the 12</h6>
 					</div>
