Altered Title font and format
Yay for google fonts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Quattrocento|Forum' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,700&subset=greek' rel='stylesheet' type='text/css'>
     <link href="navbar-static-top.css" rel="stylesheet">
@@ -78,24 +78,24 @@
 
 	<div class="container-full intro_title_block">
 		<div class="row">
-			<div class="col-md-2">
+			<div class="col-md-1">
 			</div>
 			<div class="col-md-3">
 				<div class="loose_seal">
 					<img src="img/tri-lamb_seal.png" class="img-responsive center-block img_seal" alt="Tri-Lambs Seal">
 				</div>
 			</div>
-			<div class="col-md-5">
+			<div class="col-md-7">
 				<div class="intro_title_text">
 					<h1>Lambda Lambda Lambda</h1>
 					<h1> National Fraternity</h1>
 					<span class="greek_font intro_title_lambdas">
-						<h1>Λ Λ Λ</h1>
+						<h2>Λ Λ Λ</h2>
 					</span>
 					<h3>Tri-Lambs</h3>
 				</div>
 			</div>
-			<div class="col-md-2">
+			<div class="col-md-1">
 			</div>
 		</div>	
 	</div>
